# gslcpp

./: .gitignore  CMakeLists.txt  vcpkg.json
gslcpp/: CMakeLists.txt
gslcpp/include/gslcpp/: exception.hpp  math.hpp  poly.hpp  util.hpp
gslcpp/include/gslcpp/poly/: divided_difference.hpp  solver.hpp
gslcpp/src/: exception.cpp  math.cpp  poly.cpp  util.cpp
gslcpp/src/poly/: divided_difference.cpp  solver.cpp
tests/: CMakeLists.txt
tests/include/: poly.hpp  util.hpp
tests/src/: math.cpp  math_constants.cpp  poly.cpp  util.cpp
